fixing spacing and pager alignment

--- a/public/ng/app/scss/partials/_intro.scss
+++ b/public/ng/app/scss/partials/_intro.scss
@@ -62,9 +62,6 @@
 
     .slider-pager {
       @include slider-override;
-      position: fixed;
-      bottom:   -10px;
-      left:     5px;
     }
   }
 }
