--- a/public/ng/app/scss/partials/_survey_questions.scss
+++ b/public/ng/app/scss/partials/_survey_questions.scss
@@ -21,7 +21,8 @@ li.item, .item.item-checkbox {
 // RADIO
 .radio {
   .content {
-    top: -1px;
+    top:  0px;
+    left: -5px;
   }
 }
 
